--- a/SoundByte.UWP/project.json
+++ b/SoundByte.UWP/project.json
@@ -2,8 +2,8 @@
   "dependencies": {
     "Coding4Fun.Toolkit.Controls": "2.1.8",
     "HockeySDK.UWP": "4.1.6",
-    "Microsoft.Azure.Mobile.Analytics": "0.13.1",
-    "Microsoft.Azure.Mobile.Push": "0.13.1",
+    "Microsoft.Azure.Mobile.Analytics": "0.14.0",
+    "Microsoft.Azure.Mobile.Push": "0.14.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
     "Microsoft.Services.Store.SDK": "10.1705.16001",
     "Microsoft.Toolkit.Uwp": "1.5.0",
@@ -15,6 +15,7 @@
     "NotificationsExtensions.Win10": "14332.0.2",
     "Robmikh.CompositionSurfaceFactory": "0.7.1",
     "System.ValueTuple": "4.3.1",
+    "UICompositionAnimations": "2.8.2",
     "UWP.SDKforGoogleAnalytics.Managed": "1.5.2",
     "Win2D.uwp": "1.21.0",
     "WindowsAzure.Messaging.Managed": "0.1.7.9",
