Improved Noise. Made titlebar easier to use.

--- a/SoundByte.UWP/SoundByte.UWP.csproj
+++ b/SoundByte.UWP/SoundByte.UWP.csproj
@@ -110,6 +110,7 @@
     <Content Include="Assets\BadgeLogo.scale-150.png" />
     <Content Include="Assets\BadgeLogo.scale-200.png" />
     <Content Include="Assets\BadgeLogo.scale-400.png" />
+    <Content Include="Assets\Misc\lightnoise.png" />
     <Content Include="Assets\Misc\noise.png" />
     <Content Include="Assets\PlaceholderBackground.png" />
     <Content Include="Assets\SplashScreen.scale-400.png" />
