--- a/SoundByte.UWP/SoundByte.UWP.csproj
+++ b/SoundByte.UWP/SoundByte.UWP.csproj
@@ -465,6 +465,9 @@
     <XliffResource Include="MultilingualResources\SoundCloudPlayer.UWP.nl.xlf" />
   </ItemGroup>
   <ItemGroup>
+    <SDKReference Include="Microsoft.Services.Store.Engagement, Version=10.0">
+      <Name>Microsoft Engagement Framework</Name>
+    </SDKReference>
     <SDKReference Include="Microsoft.VCLibs, Version=14.0">
       <Name>Visual C++ 2015 Runtime for Universal Windows Platform Apps</Name>
     </SDKReference>
