--- a/SoundByte.UWP/SoundByte.UWP.csproj
+++ b/SoundByte.UWP/SoundByte.UWP.csproj
@@ -229,7 +229,7 @@
       <DependentUpon>SoundByteStreamItem.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\BaseViewModel.cs" />
-    <Compile Include="ViewModels\StreamViewModel.cs" />
+    <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModels\NotificationsViewModel.cs" />
     <Compile Include="ViewModels\PlaylistViewModel.cs" />
     <Compile Include="ViewModels\SearchViewModel.cs" />
@@ -251,8 +251,8 @@
     <Compile Include="Views\General\WhatsNewView.xaml.cs">
       <DependentUpon>WhatsNewView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\StreamView.xaml.cs">
-      <DependentUpon>StreamView.xaml</DependentUpon>
+    <Compile Include="Views\HomeView.xaml.cs">
+      <DependentUpon>HomeView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Me\LoginView.xaml.cs">
       <DependentUpon>LoginView.xaml</DependentUpon>
@@ -393,7 +393,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\StreamView.xaml">
+    <Page Include="Views\HomeView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
